# speech_processing

./: .gitignore  .hgignore  000000000.lat  CMakeLists.txt  Makefile  install_pocketsprinx.sh  package.xml  setup.py
.hg/: dirstate  hgrc  last-message.txt  undo.desc  undo.dirstate
action/: VoiceReg.action
catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
command_config/: location_categories.txt  locations.txt  names.txt  object_categories.txt  objects.txt  places.txt  questions.txt  rooms.txt  verbs.txt
demo/: 1634.dic  1634.lm  7433.sent  7433.vocab  8808.log_pronounce  8808.sent  8808.vocab  robocup.launch  robocup_r1.launch  robocup_r2.launch  turtlebot_voice_cmd.launch  voice_cmd.launch  voice_faces.launch  voice_goal.launch  voice_goal.lm  voice_regis.launch
dic/: GPSR.corpus  GPSR.dic  GPSR.fsg  GPSR.jsgf  GPSR.lm  GPSR.words  RIPS.dic  RIPS.fsg  RIPS.jsgf  RIPS.lm  cleanup.fsg  cleanup.words  cocktail.dic  cocktail.fsg  cocktail.jsgf  cocktail.lm  cocktail_2013.lm  final.corpus  final.dic  final.fsg  final.jsgf  final.lm  followme.fsg  grammar.fsg  grammar.words  grammar.xml  restaurant.fsg  restaurant.lm  restaurant.words  restaurant_japan_2013.dic  restaurant_japan_2013.lm
launch/: 50_questions_Frank.launch  50_questions_German2016.launch  CP_show.launch  EEGPSRCAT5.launch  GPSR.launch  GPSR2German.launch  GPSRJapan.launch  Lumyai_RestaurantVDO.launch  RIPS.launch  basic.launch  cleanup.launch  cocktail.launch  conversation.launch  final.launch  followger_2016 .launch  followme.launch  grammar.launch  (+14 more)
(+896 files in other folders)
